[project]
name = "telegram-bot"
version = "0.1.0"
description = "Make telegram_bot"
authors = [
    {name = "jGYQrw gga",email = "Kul.vova2009@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
